2.1.1/_sources/gallery/lines_bars_and_markers/arctest.rst.txt


.. _sphx_glr_gallery_lines_bars_and_markers_arctest.py:


=======
Arctest
=======





.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_arctest_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np


    def f(t):
        'A damped exponential'
        s1 = np.cos(2 * np.pi * t)
        e1 = np.exp(-t)
        return s1 * e1


    t1 = np.arange(0.0, 5.0, .2)

    l = plt.plot(t1, f(t1), 'ro')
    plt.setp(l, 'markersize', 30)
    plt.setp(l, 'markerfacecolor', 'C0')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: arctest.py <arctest.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: arctest.ipynb <arctest.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
