2.2.5/_sources/gallery/lines_bars_and_markers/arctest.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_arctest.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_arctest.py:


=======
Arctest
=======



.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_arctest_001.png
    :class: sphx-glr-single-img






.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np


    def f(t):
        'A damped exponential'
        s1 = np.cos(2 * np.pi * t)
        e1 = np.exp(-t)
        return s1 * e1


    t1 = np.arange(0.0, 5.0, .2)

    l = plt.plot(t1, f(t1), 'ro')
    plt.setp(l, markersize=30)
    plt.setp(l, markerfacecolor='C0')

    plt.show()


.. _sphx_glr_download_gallery_lines_bars_and_markers_arctest.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: arctest.py <arctest.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: arctest.ipynb <arctest.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
